// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearAll has a disabled mode 1`] = `
<div
  className="ais-ClearRefinements"
>
  <div
    className="ais-ClearRefinements-body ais-body"
  >
    <button
      className="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
      disabled={true}
    >
      Clear all filters
    </button>
  </div>
</div>
`;

exports[`ClearAll renders a clickable button 1`] = `
<div
  className="ais-ClearRefinements"
>
  <div
    className="ais-ClearRefinements-body ais-body"
  >
    <button
      className="ais-ClearRefinements-button"
      onClick={[Function]}
    >
      Clear all filters
    </button>
  </div>
</div>
`;
